Background size should be more correct on mobile devices now

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 html
 {
-    height: 105%;
+    height: 100%;
     background: url(../images/bg2.jpg);
     background-size: cover;
 }
